[build-system]
requires = ["setuptools >= 72.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "merak"
version = "0.3.2"
authors = [
    {name = "(David) Siu-Kei Muk", email = "david.muk@proton.me"},
]
license = {file = "LICENSE"}
description = "Python binary package builder (via Cython)"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">= 3.7"
keywords = ["merak", "cython", "binary", "package", "build"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Cython",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Compilers"
]

dynamic = ["dependencies"]

[project.scripts]
merak = "merak.main:main"

[project.urls]
Repository = "https://github.com/dave-msk/merak"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
merak = ["data/*"]

[tool.setuptools.packages.find]
include = ["merak", "merak.*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
